--- a/chamber/join.html
+++ b/chamber/join.html
@@ -56,10 +56,10 @@
             <fieldset>
                 <legend><h3>Membership Level Selection</h3></legend>
             <ul>
-                <li><strong>Non-profit $100:</strong> Not for profit organizations. Member profile display in our online directory. Admittance to monthly meetings. </li><br>
-                <li><strong>Bronze $200:</strong> Business profile display in our directory. Early access  to Sponsorship opportunities. Business promotion on our social pages. Admittance to monthly meetings.</li><br>
-                <li><strong>Silver $400:</strong> All benefits of Bronze membership. Weekly ad promotion in local paper. Quarterly luncheon ticket. </li><br>
-                <li><strong>Gold $1000:</strong> All benefits of Silver membership. Exclusive one-on-one meetings with Chamber President. Banner promotion during our 'Shop local' weekend. Business training conference tickets.</li><br>
+                <li><strong>Non-profit $100:</strong> Not for profit organizations. Member profile display in our online directory. Admittance to monthly meetings. </li>
+                <li><strong>Bronze $200:</strong> Business profile display in our directory. Early access  to Sponsorship opportunities. Business promotion on our social pages. Admittance to monthly meetings.</li>
+                <li><strong>Silver $400:</strong> All benefits of Bronze membership. Weekly ad promotion in local paper. Quarterly luncheon ticket. </li>
+                <li><strong>Gold $1000:</strong> All benefits of Silver membership. Exclusive one-on-one meetings with Chamber President. Banner promotion during our 'Shop local' weekend. Business training conference tickets.</li>
             </ul>
                 <label class="top"><strong>Membership Level </strong><input list="member-type" name="member-type" required/>
                 <datalist id="member-type">
@@ -78,13 +78,14 @@
             <footer>
                 <div class="footerinfo">
                     &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
-<br> <div id="lastModified"></span>
+<br> <div id="lastModified">
                     </div>
 
                     <div class="socialicons">
                         <a href="https://www.facebook.com/City-of-Grace-Idaho-Chamber-of-Commerce-451771845158097"><img src="images/facebook32.png" alt="Facebook icon"></a>
                         <a href="https://www.instagram.com/"><img src="images/instagram32.png" alt="Instagram icon"></a>
                         <a href="https://www.linkedIn.com/"><img src="images/linkedin32.png" alt="LinkedIn icon"></a>
+                    </div>
                     </div>
                 </footer>
 </body>
