--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -59,10 +59,11 @@
                         <label class="top">Full Name* <input type="text" name="fname" required pattern="[A-Za-z].{5,}"></label>
                         <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
                         <label class="top">Phone <input type="tel" name="phone"></label>
-                        <label for="addInfo" class="top">Message <br><textarea name="addDesc" id="addDesc" cols="45" rows="10"></textarea></label>
+                        <label for="addInfo" class="top">Message <br><textarea name="addInfo" id="addInfo" cols="45" rows="10"></textarea></label>
                     </fieldset>
                         <div class="sbutton">
                         <input type="submit" value="Send Message" class="sendbutton"></div>
+                        </div>
                     </form>
        
                     <div class="gallery">
