--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -96,13 +96,14 @@
         </picture>
         <p>Secretary: Lisa Niter</p>
       </li>
+      </ul>
            </div>
 </div>
             </main>
             <footer>
                 <div class="footerinfo">
                     &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Images acquired from Unsplash | Mikenna Atkinson
-<br> <div id="lastModified"></span>
+<br> <div id="lastModified">
                     </div>
 
                     <div class="socialicons">
