--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -105,11 +105,11 @@
                     &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Images acquired from Unsplash | Mikenna Atkinson
 <br> <div id="lastModified">
                     </div>
-
                     <div class="socialicons">
                         <a href="https://www.facebook.com/City-of-Grace-Idaho-Chamber-of-Commerce-451771845158097"><img src="images/facebook32.png" alt="Facebook icon"></a>
                         <a href="https://www.instagram.com/"><img src="images/instagram32.png" alt="Instagram icon"></a>
                         <a href="https://www.linkedIn.com/"><img src="images/linkedin32.png" alt="LinkedIn icon"></a>
+                    </div>
                     </div>
                 </footer>
 </body>
