--- a/chamber/city.html
+++ b/chamber/city.html
@@ -12,7 +12,6 @@
         <link rel="stylesheet" href="css/large.css">
         <script defer src="js/dates.js"></script>
         <script defer src="js/hamburger.js"></script>
-        <script defer src=></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
@@ -40,7 +39,7 @@
             <footer>
                     <div class="footerinfo">
                         &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
-    <br> <div id="lastModified"></span>
+    <br> <div id="lastModified">
                         </div>
 
                         <div class="socialicons">
@@ -48,6 +47,7 @@
                             <a href="https://www.instagram.com/"><img src="images/instagram32.png" alt="Instagram icon"></a>
                             <a href="https://www.linkedIn.com/"><img src="images/linkedin32.png" alt="LinkedIn icon"></a>
                         </div>
+                    </div>
                     </footer>
     </body>
 </html>
