--- a/chamber/home.html
+++ b/chamber/home.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/large.css">
         <script defer src="js/dates.js"></script>
         <script defer src="js/hamburger.js"></script>
+        <script defer src="js/weather.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
@@ -34,11 +35,29 @@
             </nav>
             
             <main>
-                <div class="homeHero">
-                    <picture class="homeHeroimg">
-                        <img src="" alt="">
+                Welcome to the Grace Chamber of Commerce
+                <div class="heroimg">
+                    <picture>
+                        <source media="(max-width: 399px)" srcset=""/>
+                        <source media="(max-width: 799px)" srcset=""/>
+                        <source media="(max-width: 800px)" srcset=""/>
+                        <img src="images/" alt=" " width="1200" height="330"/>
                         </picture>
+
+                    <div class="weathersummary">
+                        <h3>Weather Summary</h3>
+                        <span class="category">Currently:</span>
+                        <span class="conditions"><span id="desc"></span></span>
+                        <span class="category">Temperature:</span>
+                        <span class="conditions"><span id="temp"></span>°F</span>
+                        <span class="category">Wind Chill:</span>
+                        <span class="conditions"><span id="wchill"></span>°F</span>
+                        <span class="category">Humidity:</span>
+                        <span class="conditions"><span id="humidity"></span>%</span>
+                        <span class="category">Wind Speed:</span>
+                        <span class="conditions"><span id="wspeed"></span>mph</span>
                         </div>
+                 </div>
                     
                     <div class="homeAbout">
                         <p>The Grace Chamber of Commerce works closely with the Grace City Council, and the Grace Economic Development Corporation to promote the 
@@ -48,18 +67,20 @@
                             </div>
 
                     <div class="homeSpotlight">
+                        <h2>Local Business Spotlight</h2>
                         <a href="https://www.facebook.com/3cGrill"><img src="" alt="3C Grill logo"></a>
                         <a href="https://www.facebook.com/VividArtsPrinting"><img src="" alt="Vivid Art Printing logo"></a>
                         <a href="https://www.google.com"><img src="" alt="Professional Home & Landscape logo"></a>
                             </div>
 
                     <div class="homeEvents">
-
+                        <h2>Yearly Events</h2>
                                 </div>
 
-                    <div class="homeWeather">
-
-                                    </div>
+                    <div class="homeForecast">
+                        <h2>Three Day Forecast</h2>
+                        <div class="forecast"></div>
+                    </div>
 
                     <div class="contactinfo">
 
@@ -68,7 +89,8 @@
             <footer>
                     <div class="footerinfo">
                         &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
-    <br> <div id="lastModified">
+                         <br> <div id="lastModified">
+                            Weather data provided by <a href="https://openweathermap.org/" target="_blank">Openweathermap.org</a>
                         </div>
 
                         <div class="socialicons">
