--- a/chamber/home.html
+++ b/chamber/home.html
@@ -35,7 +35,7 @@
             </nav>
             
             <main>
-                Welcome to the Grace Chamber of Commerce
+                <h2>Welcome to the Grace Chamber of Commerce</h2>
                 <div class="heroimg">
                     <picture>
                         <source media="(max-width: 399px)" srcset=""/>
