--- a/chamber/home.html
+++ b/chamber/home.html
@@ -38,10 +38,10 @@
                 <h2>Welcome to the Grace Chamber of Commerce</h2>
                 <div class="heroimg">
                     <picture>
-                        <source media="(max-width: 399px)" srcset=""/>
+                        <source media="(max-width: 399px)" srcset="images/"/>
                         <source media="(max-width: 799px)" srcset=""/>
                         <source media="(max-width: 800px)" srcset=""/>
-                        <img src="images/" alt=" " width="1200" height="330"/>
+                        <img src="images/hero1200.jpg" alt="landscape view at sunset of mountains and hills " width="1200" height="525"/>
                         </picture>
 
                     <div class="weathersummary">
@@ -68,10 +68,12 @@
 
                     <div class="homeSpotlight">
                         <h2>Local Business Spotlight</h2>
-                        <a href="https://www.facebook.com/3cGrill"><img src="" alt="3C Grill logo"></a>
-                        <a href="https://www.facebook.com/VividArtsPrinting"><img src="" alt="Vivid Art Printing logo"></a>
-                        <a href="https://www.google.com"><img src="" alt="Professional Home & Landscape logo"></a>
-                            </div>
+                        <div class="bcards"
+                        <a href="https://www.facebook.com/3cGrill"><img src="images/3C.jpg" alt="3C Grill logo"></a>
+                        <a href="https://www.facebook.com/VividArtsPrinting"><img src="images/va.jpg" alt="Vivid Art Printing logo"></a>
+                        <a href="https://www.google.com"><img src="images/professionalhm.jpg" alt="Professional Home & Landscape logo"></a>
+                        </div>        
+                    </div>
 
                     <div class="homeEvents">
                         <h2>Yearly Events</h2>
