--- a/chamber/home.html
+++ b/chamber/home.html
@@ -38,9 +38,9 @@
                 <h2>Welcome to the Grace Chamber of Commerce</h2>
                 <div class="heroimg">
                     <picture>
-                        <source media="(max-width: 399px)" srcset="images/"/>
-                        <source media="(max-width: 799px)" srcset=""/>
-                        <source media="(max-width: 800px)" srcset=""/>
+                        <source media="(max-width: 399px)" srcset="images/hero400.jpg"/>
+                        <source media="(max-width: 799px)" srcset="images/hero700.jpg"/>
+                        <source media="(max-width: 800px)" srcset="images/hero800.jpg"/>
                         <img src="images/hero1200.jpg" alt="landscape view at sunset of mountains and hills " width="1200" height="525"/>
                         </picture>
 
@@ -76,7 +76,7 @@
                     </div>
 
                     <div class="homeEvents">
-                        <h2>Yearly Events</h2>
+                        <h2>Upcoming Area Events</h2>
                                 </div>
 
                     <div class="homeForecast">
