--- a/chamber/home.html
+++ b/chamber/home.html
@@ -44,8 +44,9 @@
                         <img src="images/hero1200.jpg" alt="landscape view at sunset of mountains and hills " width="1200" height="525"/>
                         </picture>
 
-                    <div class="weathersummary">
+                    <section class="wsummary">
                         <h3>Weather Summary</h3>
+                        <div class="gridlayout">
                         <span class="category">Currently:</span>
                         <span class="conditions"><span id="desc"></span></span>
                         <span class="category">Temperature:</span>
