--- a/chamber/home.html
+++ b/chamber/home.html
@@ -47,11 +47,20 @@
                     <section class="wsummary">
                         <h3>Weather Summary</h3>
                         <div class="gridlayout">
-                        <span class="category">Currently:</span><span class="conditions"><span id="desc"></span></span>
-                        <span class="category">Temperature:</span><span class="conditions"><span id="temp"></span>°F</span>
-                        <span class="category">Wind Chill:</span><span class="conditions"><span id="wchill"></span>°F</span>
-                        <span class="category">Humidity:</span><span class="conditions"><span id="humidity"></span>%</span>
-                        <span class="category">Wind Speed:</span><span class="conditions"><span id="wspeed"></span>mph</span>
+                        <span class="category">Currently:</span>
+                        <span class="conditions"><span id="desc"></span></span>
+
+                        <span class="category">Temperature:</span>
+                        <span class="conditions"><span id="temp"></span>°F</span>
+
+                        <span class="category">Wind Chill:</span>
+                        <span class="conditions"><span id="wchill"></span>°F</span>
+
+                        <span class="category">Humidity:</span>
+                        <span class="conditions"><span id="humidity"></span>%</span>
+                        
+                        <span class="category">Wind Speed:</span>
+                        <span class="conditions"><span id="wspeed"></span>mph</span>
                         </div>
                         </section>
                  </div>
