join button home

--- a/chamber/home.html
+++ b/chamber/home.html
@@ -58,7 +58,7 @@
 
                         <span class="category">Humidity:</span>
                         <span class="conditions"><span id="humidity"></span>%</span>
-                        
+
                         <span class="category">Wind Speed:</span>
                         <span class="conditions"><span id="wspeed"></span>mph</span>
                         </div>
@@ -70,8 +70,11 @@
                             economic growth. Grace boasts it's small town feel while supporting a variety of local business owners and their services. Our goal is to
                             help businesses and residents alike come together to support one another.
                         </p>
+                        <div class="homebtn">
+                            <button onclick="document.location='https://mikennaa.github.io/wdd230/chamber/join.html'"> Become A Member </button>
+                                </div>
                             </div>
-
+                           
                     <div class="homeSpotlight">
                         <h2>Local Business Spotlight</h2>
                         <div class="bcards"
