--- a/chamber/home.html
+++ b/chamber/home.html
@@ -36,7 +36,7 @@
             
             <main>
                 <h2>Welcome to the Grace Chamber of Commerce</h2>
-                <div class="heroimg">
+                <div class="herodiv">
                     <picture>
                         <source media="(max-width: 399px)" srcset="images/hero400.jpg"/>
                         <source media="(max-width: 799px)" srcset="images/hero700.jpg"/>
