--- a/chamber/home.html
+++ b/chamber/home.html
@@ -37,7 +37,7 @@
             <main>
                 <h2>Welcome to the Grace Chamber of Commerce</h2>
                 <div class="herodiv">
-                    <picture>
+                    <picture class="homeimg">
                         <source media="(max-width: 399px)" srcset="images/hero400.jpg"/>
                         <source media="(max-width: 799px)" srcset="images/hero700.jpg"/>
                         <source media="(max-width: 800px)" srcset="images/hero800.jpg"/>
@@ -68,21 +68,23 @@
                     <div class="homeAbout">
                         <p>The Grace Chamber of Commerce works closely with the Grace City Council, and the Grace Economic Development Corporation to promote the 
                             economic growth. Grace boasts it's small town feel while supporting a variety of local business owners and their services. Our goal is to
-                            help businesses and residents alike come together to support one another.
+                            help businesses and residents alike come together to support one another.<br><br>
+                            
+                            We would love to have you join us! Click the button below to become a member today!
                         </p>
                         <div class="homebtn">
                             <button onclick="document.location='https://mikennaa.github.io/wdd230/chamber/join.html'"> Become A Member </button>
                                 </div>
                             </div>
                            
-                    <div class="homeSpotlight">
-                        <h2>Local Business Spotlight</h2>
-                        <div class="bcards"
+                    <section class="homeSpotlight">
+                        <h2>Local Business Spotlight</h2><br>
+                        <div class="bcards">
                         <a href="https://www.facebook.com/3cGrill"><img src="images/3C.jpg" alt="3C Grill logo"></a>
                         <a href="https://www.facebook.com/VividArtsPrinting"><img src="images/va.jpg" alt="Vivid Art Printing logo"></a>
                         <a href="https://www.google.com"><img src="images/professionalhm.jpg" alt="Professional Home & Landscape logo"></a>
                         </div>        
-                    </div>
+                    </section>
 
                     <div class="homeEvents">
                         <h2>Upcoming Area Events</h2>
