--- a/chamber/home.html
+++ b/chamber/home.html
@@ -77,14 +77,28 @@
                                 </div>
                             </div>
                            
-                    <section class="homeSpotlight">
-                        <h2>Local Business Spotlight</h2><br>
-                        <div class="bcards">
-                        <a href="https://www.facebook.com/3cGrill"><img src="images/3C.jpg" alt="3C Grill logo"></a>
-                        <a href="https://www.facebook.com/VividArtsPrinting"><img src="images/va.jpg" alt="Vivid Art Printing logo"></a>
-                        <a href="https://www.google.com"><img src="images/professionalhm.jpg" alt="Professional Home & Landscape logo"></a>
-                        </div>        
-                    </section>
+                            <div class="homegallery">
+                                <h2>Highlighting Local Businesses</h2>
+                         <ul class="scards" style="list-style-type:none;">
+                           <li>
+                             <picture class="sgallery">
+                                <a href="http://3c-grill.com/"> <img src="images/3C.jpg" alt="3C Grill logo in black and white">
+                             </picture>
+                           </li>
+
+                           <li>
+                            <picture class="sgallery">
+                                <a href="https://www.facebook.com/VividArtsPrinting"></a><img src="images/va.jpg" alt="Vivid Art logo">
+                              </picture>
+                            </li>
+
+                            <li>
+                            <picture class="sgallery">
+                                <a href="https://www.google.com"><img src="images/professionalhm.jpg" alt="Professional Home & Landscape logo">
+                                  </picture>
+                                </li>
+                          </ul>
+                               </div>
 
                     <div class="homeEvents">
                         <h2>Upcoming Area Events</h2>
