--- a/chamber/home.html
+++ b/chamber/home.html
@@ -102,6 +102,12 @@
 
                     <div class="homeEvents">
                         <h2>Upcoming Area Events</h2>
+                        <ul>
+                            <li>December 13th: Caribou Historical Society Santa Visit @ Historical Society, Soda Springs</li>
+                            <li>December 14th: Grace Stake Christmas Party, all are invited @ Grace Stake Center</li>
+                            <li>December 15th: Gnome Paint Night @ Robbinett Studio, Soda Springs</li>
+                            <li>December 16th: Serendipity & Social Dance @ Gem Valley Performing Arts Center, Grace </li>
+                        </ul>
                                 </div>
 
                     <div class="homeForecast">
