--- a/chamber/home.html
+++ b/chamber/home.html
@@ -116,7 +116,12 @@
                     </div>
 
                     <div class="contactinfo">
-
+                        <p><strong>Mailing Address:</strong> PO BOX 214 Grace, Idaho 83241<br>
+                            <strong>Phone Number:</strong> (208) 425-3533<br>
+                           <strong>Email:</strong> info@graceidaho.com<br>
+                            <strong>City Hall Website:</strong> cityofgraceid.com </p>
+                            <div class="homemap">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2938.0042403075067!2d-111.73055348453687!3d42.5764324791729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8755a26bf20aea47%3A0xd93417a0e6a94fff!2sGrace%20City%20Hall!5e0!3m2!1sen!2sus!4v1639525345343!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                                         </div>
             </main>
             <footer>
