home contact info

--- a/chamber/home.html
+++ b/chamber/home.html
@@ -82,19 +82,19 @@
                          <ul class="scards" style="list-style-type:none;">
                            <li>
                              <picture class="sgallery">
-                                <a href="http://3c-grill.com/"> <img src="images/3C.jpg" alt="3C Grill logo in black and white">
+                                <img src="images/3C.jpg" alt="3C Grill logo in black and white">
                              </picture>
                            </li>
 
                            <li>
                             <picture class="sgallery">
-                                <a href="https://www.facebook.com/VividArtsPrinting"></a><img src="images/va.jpg" alt="Vivid Art logo">
+                                </a><img src="images/va.jpg" alt="Vivid Art logo">
                               </picture>
                             </li>
 
                             <li>
                             <picture class="sgallery">
-                                <a href="https://www.google.com"><img src="images/professionalhm.jpg" alt="Professional Home & Landscape logo">
+                                <img src="images/professionalhm.jpg" alt="Professional Home & Landscape logo">
                                   </picture>
                                 </li>
                           </ul>
@@ -102,11 +102,11 @@
 
                     <div class="homeEvents">
                         <h2>Upcoming Area Events</h2>
-                        <ul>
-                            <li>December 13th: Caribou Historical Society Santa Visit @ Historical Society, Soda Springs</li>
-                            <li>December 14th: Grace Stake Christmas Party, all are invited @ Grace Stake Center</li>
-                            <li>December 15th: Gnome Paint Night @ Robbinett Studio, Soda Springs</li>
-                            <li>December 16th: Serendipity & Social Dance @ Gem Valley Performing Arts Center, Grace </li>
+                        <ul class="events">
+                            <li>December 13th: Caribou Historical Society Santa Visit @ Historical Society, Soda Springs</li><br>
+                            <li>December 14th: Grace Stake Christmas Party, all are invited @ Grace Stake Center</li><br>
+                            <li>December 15th: Gnome Paint Night @ Robbinett Studio, Soda Springs</li><br>
+                            <li>December 16th: Serendipity & Social Dance @ Gem Valley Performing Arts Center, Grace </li><br>
                         </ul>
                                 </div>
 
@@ -115,7 +115,9 @@
                         <div class="forecast"></div>
                     </div>
 
-                    <div class="contactinfo">
+                    <div class="hcontactinfo">
+                        <h2>Contact Information</h2>
+                        <p><strong>Commerce Meetings: Every 1st Monday, 7pm @ Grace City Hall</strong></p>
                         <p><strong>Mailing Address:</strong> PO BOX 214 Grace, Idaho 83241<br>
                             <strong>Phone Number:</strong> (208) 425-3533<br>
                            <strong>Email:</strong> info@graceidaho.com<br>
@@ -123,6 +125,7 @@
                             <div class="homemap">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2938.0042403075067!2d-111.73055348453687!3d42.5764324791729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8755a26bf20aea47%3A0xd93417a0e6a94fff!2sGrace%20City%20Hall!5e0!3m2!1sen!2sus!4v1639525345343!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                                         </div>
+                    </div>
             </main>
             <footer>
                     <div class="footerinfo">
