--- a/chamber/home.html
+++ b/chamber/home.html
@@ -88,7 +88,7 @@
 
                            <li>
                             <picture class="sgallery">
-                                </a><img src="images/va.jpg" alt="Vivid Art logo">
+                               <img src="images/va.jpg" alt="Vivid Art logo">
                               </picture>
                             </li>
 
@@ -103,10 +103,10 @@
                     <div class="homeEvents">
                         <h2>Upcoming Area Events</h2>
                         <ul class="events">
-                            <li>December 13th: Caribou Historical Society Santa Visit @ Historical Society, Soda Springs</li><br>
-                            <li>December 14th: Grace Stake Christmas Party, all are invited @ Grace Stake Center</li><br>
-                            <li>December 15th: Gnome Paint Night @ Robbinett Studio, Soda Springs</li><br>
-                            <li>December 16th: Serendipity & Social Dance @ Gem Valley Performing Arts Center, Grace </li><br>
+                            <li>December 13th: Caribou Historical Society Santa Visit @ Historical Society, Soda Springs</li>
+                            <li>December 14th: Grace Stake Christmas Party, all are invited @ Grace Stake Center</li>
+                            <li>December 15th: Gnome Paint Night @ Robbinett Studio, Soda Springs</li>
+                            <li>December 16th: Serendipity & Social Dance @ Gem Valley Performing Arts Center, Grace </li>
                         </ul>
                                 </div>
 
