--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -73,28 +73,28 @@
          <picture class="bgallery">
            <img src="images/boardmbr1.jpg" alt="Male board member">
          </picture>
-         <p>President: Matt Caribou</p>
+         <p>President: Randy Caribou</p>
        </li>
 
        <li>
         <picture class="bgallery">
           <img src="images/boardmbr2.jpg" alt="Female board member">
         </picture>
-        <p>Chairman: Natalie Grace</p>
+        <p>Chairman: Laurie Grace</p>
       </li>
 
       <li>
         <picture class="bgallery">
           <img src="images/boardmbr4.jpg" alt="Male board member">
         </picture>
-        <p>Board Member: Dan Thatcher</p>
+        <p>Board Member: Tom Thatcher</p>
       </li>
 
       <li>
         <picture class="bgallery">
           <img src="images/boardmbr3.jpg" alt="Female board member">
         </picture>
-        <p>Secretary: Lisa Niter</p>
+        <p>Secretary: Linda Niter</p>
       </li>
       </ul>
            </div>
