--- a/chamber/home.html
+++ b/chamber/home.html
@@ -68,7 +68,10 @@
                     <div class="homeAbout">
                         <p>The Grace Chamber of Commerce works closely with the Grace City Council, and the Grace Economic Development Corporation to promote the 
                             economic growth. Grace boasts it's small town feel while supporting a variety of local business owners and their services. Our goal is to
-                            help businesses and residents alike come together to support one another.<br><br>
+                            help businesses and residents alike come together to support one another.
+                            <br>
+                            <p><strong>Mission Statement: The mission of the Grace Chamber of Commerce is to promote cooperation among all concerned parties in the enhancement of our community in the areas of economic growth, livability , appearance, pride, and general unity.</strong></p>
+                            <br>
                             
                             We would love to have you join us! Click the button below to become a member today!
                         </p>
