--- a/chamber/city.html
+++ b/chamber/city.html
@@ -147,7 +147,7 @@
             </main>
             <footer>
                     <div class="footerinfo">
-                        &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
+                        &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson |
     <br> <div id="lastModified"> Images provided by City of Grace Idaho Chamber of Commerce Facebook Page | Information obtained from <a href="https://www.graceidaho.com/html/earlyhistory.html" target="_blank">Early History of Grace</a>
                         </div>
 
