--- a/chamber/home.html
+++ b/chamber/home.html
@@ -116,6 +116,24 @@
                     <div class="homeForecast">
                         <h2>Three Day Forecast</h2>
                         <div class="forecast"></div>
+                        <div class="days">Wed</div>
+                        <div class="daysweather">
+                            <img src="" alt="">
+                        </div>
+
+                        <div class="forecast"></div>
+                        <div class="days">Thurs</div>
+                        <div class="daysweather">
+                            <img src="" alt="">
+                        </div>
+    
+                        <div class="forecast"></div>
+                        <div class="days">Fri</div>
+                        <div class="daysweather">
+                            <img src="" alt="">
+                        </div>
+                                
+                        </div>
                     </div>
 
                     <div class="hcontactinfo">
