--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,7 +13,9 @@
         <script defer src="js/dates.js"></script>
         <script defer src="js/hamburger.js"></script>
         <script defer src="data/directory.json"></script>
+        <script defer src="js/directory.js"></script>
         <script defer src="js/bcards.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
@@ -37,7 +39,14 @@
             
             <main>
                <h2>Local Business Directory</h2>
+               <div id= "btnbox">
+               <button class="listv" onclick="listView()"><i class="fa fa-bars"></i>List </button>
+               <button class="gridv" onclick="gridView()"><i class="fa fa-th-large"></i>Grid</button>
+            </div>
                <div class="bcards">
+                   <div class="column">
+
+                   </div>
 
                </div>
             </main>
